Jpa finally working with micronaut, basic ops

--- a/backend/sharedPayments/pom.xml
+++ b/backend/sharedPayments/pom.xml
@@ -18,6 +18,7 @@
     <jdk.version>11</jdk.version>
     <release.version>11</release.version>
     <micronaut.version>3.5.2</micronaut.version>
+    <micronaut.data.version>3.4.2</micronaut.data.version>
     <micronaut.runtime>netty</micronaut.runtime>
     <exec.mainClass>sharedPayments.Application</exec.mainClass>
   </properties>
@@ -40,6 +41,33 @@
       <artifactId>micronaut-validation</artifactId>
       <scope>compile</scope>
     </dependency>
+     <dependency>
+      <groupId>io.micronaut.data</groupId>
+      <artifactId>micronaut-data-hibernate-jpa</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency> 
+	  <groupId>io.micronaut.sql</groupId>
+	  <artifactId>micronaut-hibernate-jpa</artifactId>
+	  <scope>compile</scope>
+	</dependency>
+	<dependency> 
+	    <groupId>io.micronaut.sql</groupId>
+	    <artifactId>micronaut-jdbc-hikari</artifactId>
+	    <scope>compile</scope>
+	</dependency>
+	<dependency> 
+	    <groupId>jakarta.persistence</groupId>
+	    <artifactId>jakarta.persistence-api</artifactId>
+	    <version>2.2.3</version>
+	    <scope>compile</scope>
+	</dependency>
+    <dependency>
+	  <groupId>mysql</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	</dependency>
+    
+    
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -102,6 +130,26 @@
               <artifactId>micronaut-http-validation</artifactId>
               <version>${micronaut.version}</version>
             </path>
+            <path>
+              <groupId>io.micronaut</groupId>
+              <artifactId>micronaut-inject-java</artifactId>
+              <version>${micronaut.version}</version>
+            </path>
+            <path>
+              <groupId>io.micronaut.data</groupId>
+              <artifactId>micronaut-data-processor</artifactId>
+              <version>${micronaut.data.version}</version>
+            </path>
+            <path>
+              <groupId>io.micronaut</groupId>
+              <artifactId>micronaut-validation</artifactId>
+              <version>${micronaut.version}</version>
+			</path>
+			<path>
+			    <groupId>io.micronaut.data</groupId>
+			    <artifactId>micronaut-data-hibernate-jpa</artifactId>
+			    <version>${micronaut.data.version}</version>
+			</path>
           </annotationProcessorPaths>
           <compilerArgs>
             <arg>-Amicronaut.processing.group=sharedPayments</arg>
