--- a/backend/sharedPayments/src/main/resources/application.yml
+++ b/backend/sharedPayments/src/main/resources/application.yml
@@ -1,7 +1,24 @@
 micronaut:
   application:
     name: sharedPayments
+    
 netty:
   default:
     allocator:
       max-order: 3
+      
+datasources:
+  default:
+    url: jdbc:mysql://localhost:3306/test
+    driverClassName: com.mysql.cj.jdbc.Driver
+    username: root
+    password: "password"
+    dialect: MySQL
+
+jpa:
+  default:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        show_sql: true
