--- a/backend/sharedPayments/src/main/resources/application.yml
+++ b/backend/sharedPayments/src/main/resources/application.yml
@@ -6,7 +6,12 @@ netty:
   default:
     allocator:
       max-order: 3
-      
+
+micronaut:
+    server:
+        cors:
+            enabled: true
+
 datasources:
   default:
     url: jdbc:mysql://localhost:3306/test
