--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,9 +7,9 @@ COPY sharedPaymentsWeb/src /frontend/sharedPaymentsWeb/src
 
 RUN npm install -g @angular/cli
 RUN npm install
-RUN ng build
+RUN ng build -c production
 
+#####################################
 FROM nginx:1.23
-# Copy build from building container
 COPY --from=builder /frontend/sharedPaymentsWeb/dist/shared-payments-web/*.* /usr/share/nginx/html
 EXPOSE 80
