--- a/backend/sharedPayments/pom.xml
+++ b/backend/sharedPayments/pom.xml
@@ -9,16 +9,17 @@
 	<parent>
 		<groupId>io.micronaut</groupId>
 		<artifactId>micronaut-parent</artifactId>
-		<version>3.5.2</version>
+		<version>3.6.0</version>
 	</parent>
 
 	<properties>
 		<packaging>jar</packaging>
 		<jdk.version>11</jdk.version>
 		<release.version>11</release.version>
-		<micronaut.version>3.5.2</micronaut.version>
+		<micronaut.version>3.6.0</micronaut.version>
 		<micronaut.data.version>3.4.2</micronaut.data.version>
 		<micronaut.runtime>netty</micronaut.runtime>
+		<micronaut.test.resources.enabled>true</micronaut.test.resources.enabled>
 		<exec.mainClass>sharedPayments.Application</exec.mainClass>
 	</properties>
 
@@ -98,7 +99,6 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>testcontainers</artifactId>
-			<version>1.17.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -111,11 +111,9 @@
 			<artifactId>mysql</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<scope>test</scope>
+			<groupId>io.micronaut.testresources</groupId>
+			<artifactId>micronaut-test-resources-core</artifactId>
 		</dependency>
 
 
