--- a/backend/sharedPayments/pom.xml
+++ b/backend/sharedPayments/pom.xml
@@ -19,7 +19,7 @@
 		<micronaut.version>3.6.0</micronaut.version>
 		<micronaut.data.version>3.8.0</micronaut.data.version>
 		<micronaut.runtime>netty</micronaut.runtime>
-		<micronaut.test.resources.enabled>false</micronaut.test.resources.enabled>
+		<micronaut.test.resources.enabled>true</micronaut.test.resources.enabled>
 		<exec.mainClass>sharedPayments.Application</exec.mainClass>
 	</properties>
 
@@ -98,8 +98,7 @@
 		<dependency>
 			<groupId>io.micronaut.spring</groupId>
 			<artifactId>micronaut-spring</artifactId>
-			<version>4.3.1</version>
-			<scope>runtime</scope>
+			<scope>test</scope>
 		</dependency>
 
 
