--- a/backend/sharedPayments/src/main/resources/application-test.yml
+++ b/backend/sharedPayments/src/main/resources/application-test.yml
@@ -16,6 +16,10 @@ micronaut:
 
 datasources:
   default:
+    url: jdbc:mysql://${DATABASE_URL:`localhost:3306`}/${DATABASE_NAME:test}
+    driverClassName: com.mysql.cj.jdbc.Driver
+    username: ${DATABASE_USERNAME:root}
+    password: ${DATABASE_PASSWORD:password}
     db-type: mysql
     dialect: MySQL
   
