--- a/backend/sharedPayments/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/backend/sharedPayments/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -53,5 +53,10 @@
     "name": "test-resources.containers.mysql.ro-fs-bind",
     "type": "java.lang.String",
     "description": "A description for 'test-resources.containers.mysql.ro-fs-bind'"
+  },
+  {
+    "name": "datasources.default.auto-commit",
+    "type": "java.lang.String",
+    "description": "A description for 'datasources.default.auto-commit'"
   }
 ]}
