--- a/backend/parent-project/pom.xml
+++ b/backend/parent-project/pom.xml
@@ -14,7 +14,6 @@
 	</parent>
 
 	<properties>
-		<exec.mainClass>com.sharedPayments.Application</exec.mainClass>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.11</maven.compiler.source>
 		<maven.compiler.target>1.11</maven.compiler.target>
@@ -35,6 +34,7 @@
 	</repositories>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>io.micronaut</groupId>
 			<artifactId>micronaut-inject</artifactId>
@@ -159,8 +159,51 @@
 					<version>3.0.2</version>
 				</plugin>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
+					<version>3.8.1</version>
+					<configuration>
+						<compilerArgs>
+							<arg>-parameters</arg>
+						</compilerArgs>
+						<annotationProcessorPaths>
+							<path>
+								<groupId>io.micronaut</groupId>
+								<artifactId>micronaut-inject-java</artifactId>
+								<version>${micronaut.version}</version>
+							</path>
+							<path>
+								<groupId>io.micronaut</groupId>
+								<artifactId>micronaut-validation</artifactId>
+								<version>${micronaut.version}</version>
+							</path>
+						</annotationProcessorPaths>
+					</configuration>
+					<executions>
+						<execution>
+							<id>test-compile</id>
+							<goals>
+								<goal>testCompile</goal>
+							</goals>
+							<configuration>
+								<compilerArgs>
+									<arg>-parameters</arg>
+								</compilerArgs>
+								<annotationProcessorPaths>
+									<path>
+										<groupId>io.micronaut</groupId>
+										<artifactId>micronaut-inject-java</artifactId>
+										<version>${micronaut.version}</version>
+									</path>
+									<path>
+										<groupId>io.micronaut</groupId>
+										<artifactId>micronaut-validation</artifactId>
+										<version>${micronaut.version}</version>
+									</path>
+								</annotationProcessorPaths>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -186,6 +229,47 @@
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>3.0.0</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<!-- Uncomment to enable incremental compilation -->
+						<!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
+
+						<annotationProcessorPaths combine.children="append">
+							<path>
+								<groupId>io.micronaut</groupId>
+								<artifactId>micronaut-http-validation</artifactId>
+								<version>${micronaut.version}</version>
+							</path>
+							<path>
+								<groupId>io.micronaut</groupId>
+								<artifactId>micronaut-inject-java</artifactId>
+								<version>${micronaut.version}</version>
+							</path>
+							<path>
+								<groupId>io.micronaut.data</groupId>
+								<artifactId>micronaut-data-processor</artifactId>
+								<version>${micronaut.data.version}</version>
+							</path>
+							<path>
+								<groupId>io.micronaut</groupId>
+								<artifactId>micronaut-validation</artifactId>
+								<version>${micronaut.version}</version>
+							</path>
+							<path>
+								<groupId>io.micronaut.data</groupId>
+								<artifactId>micronaut-data-hibernate-jpa</artifactId>
+								<version>${micronaut.data.version}</version>
+							</path>
+						</annotationProcessorPaths>
+						<compilerArgs>
+							<arg>-Amicronaut.processing.group=com.sharedPayments</arg>
+							<arg>-Amicronaut.processing.module=com.sharedPayments</arg>
+						</compilerArgs>
+					</configuration>
+				</plugin>
+
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -195,44 +279,42 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>${exec.mainClass}</mainClass>
+								</transformer>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
 				<configuration>
-					<!-- Uncomment to enable incremental compilation -->
-					<!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
-
-					<annotationProcessorPaths combine.children="append">
-						<path>
-							<groupId>io.micronaut</groupId>
-							<artifactId>micronaut-http-validation</artifactId>
-							<version>${micronaut.version}</version>
-						</path>
-						<path>
-							<groupId>io.micronaut</groupId>
-							<artifactId>micronaut-inject-java</artifactId>
-							<version>${micronaut.version}</version>
-						</path>
-						<path>
-							<groupId>io.micronaut.data</groupId>
-							<artifactId>micronaut-data-processor</artifactId>
-							<version>${micronaut.data.version}</version>
-						</path>
-						<path>
-							<groupId>io.micronaut</groupId>
-							<artifactId>micronaut-validation</artifactId>
-							<version>${micronaut.version}</version>
-						</path>
-						<path>
-							<groupId>io.micronaut.data</groupId>
-							<artifactId>micronaut-data-hibernate-jpa</artifactId>
-							<version>${micronaut.data.version}</version>
-						</path>
-					</annotationProcessorPaths>
-					<compilerArgs>
-						<arg>-Amicronaut.processing.group=com.sharedPayments</arg>
-						<arg>-Amicronaut.processing.module=com.sharedPayments</arg>
-					</compilerArgs>
+					<executable>java</executable>
+					<arguments>
+						<argument>-classpath</argument>
+						<classpath />
+						<argument>-noverify</argument>
+						<argument>-XX:TieredStopAtLevel=1</argument>
+						<argument>-Dcom.sun.management.jmxremote</argument>
+						<argument>${exec.mainClass}</argument>
+					</arguments>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
@@ -253,5 +335,6 @@
 		<module>application</module>
 		<module>infrastructure</module>
 		<module>controller</module>
+		<module>startup</module>
 	</modules>
 </project>
