JPA entities not found

--- a/backend/parent-project/application/pom.xml
+++ b/backend/parent-project/application/pom.xml
@@ -16,8 +16,7 @@
 		<maven.compiler.target>1.11</maven.compiler.target>
 		<exec.mainClass>com.sharedPayments.Application</exec.mainClass>
 	</properties>
-	<dependencies></dependencies>
-	<build>
-		
-	</build>
+	<dependencies>
+	</dependencies>
+	<build></build>
 </project>
