--- a/backend/parent-project/pom.xml
+++ b/backend/parent-project/pom.xml
@@ -10,17 +10,16 @@
 	<parent>
 		<groupId>io.micronaut</groupId>
 		<artifactId>micronaut-parent</artifactId>
-		<version>3.6.0</version>
+		<version>3.7.1</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.11</maven.compiler.source>
 		<maven.compiler.target>1.11</maven.compiler.target>
-		<packaging>jar</packaging>
 		<jdk.version>11</jdk.version>
 		<release.version>11</release.version>
-		<micronaut.version>3.6.0</micronaut.version>
+		<micronaut.version>3.7.1</micronaut.version>
 		<micronaut.data.version>3.8.0</micronaut.data.version>
 		<micronaut.runtime>netty</micronaut.runtime>
 		<micronaut.test.resources.enabled>true</micronaut.test.resources.enabled>
@@ -251,6 +250,14 @@
 			<plugin>
 				<groupId>io.micronaut.build</groupId>
 				<artifactId>micronaut-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>none</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
