--- a/backend/parent-project/startup/src/main/resources/application.yml
+++ b/backend/parent-project/startup/src/main/resources/application.yml
@@ -23,7 +23,7 @@ jpa:
   default:
     entity-scan:
       classpath: true
-      packages: "com.sharedPayments.model"
+#packages: "com.sharedPayments"
     properties:
       hibernate:
         hbm2ddl:
