--- a/backend/parent-project/application/pom.xml
+++ b/backend/parent-project/application/pom.xml
@@ -13,5 +13,7 @@
 	<properties>
 		<exec.mainClass>com.sharedPayments.Application</exec.mainClass>
 	</properties>
-	
+
+	<dependencies>
+	</dependencies>
 </project>
