--- a/backend/parent-project/infrastructure/pom.xml
+++ b/backend/parent-project/infrastructure/pom.xml
@@ -10,6 +10,13 @@
 	<name>infrastructure</name>
 	<packaging>jar</packaging>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.sharedPayments</groupId>
+			<artifactId>application</artifactId>
+			<version>0.3</version>
+		</dependency>
+	</dependencies>
 
 
 </project>
