--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 */.metadata/
-/node_modules/
-/.vscode/
+*/node_modules/
+*/.vscode/
 .DS_Store
-/META_INF/
-/target
-/.settings/
-/.micronaut/
+*/META_INF/
+*/target
+*/.settings/
+*/.micronaut/
+*/bin/
