--- a/backend/parent-project/startup/pom.xml
+++ b/backend/parent-project/startup/pom.xml
@@ -25,5 +25,12 @@
 			<version>0.3</version>
 		</dependency>
 	</dependencies>
-	<build></build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>io.micronaut.build</groupId>
+				<artifactId>micronaut-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
