--- a/backend/parent-project/pom.xml
+++ b/backend/parent-project/pom.xml
@@ -121,6 +121,13 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<pluginManagement>
